Explored missing values

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -424,13 +424,49 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Check which rows have missing values\n",
     "anime_df.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "anime_id      0\n",
+       "name          0\n",
+       "genre        62\n",
+       "type         25\n",
+       "episodes      0\n",
+       "rating      230\n",
+       "members       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# How many missing values do we have for each column?\n",
+    "anime_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems like there are missing values for the genre(62), type(25), and rating(230) columns. For a recommendation system, I believe that missing values like genre in particular, will make the system significantly more inaccurate as the genre a film is heavily dictates the enjoyment one may have viewing it."
    ]
   },
   {
