--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -466,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems like there are missing values for the genre(62), type(25), and rating(230) columns. For a recommendation system, I believe that missing values like genre in particular, will make the system significantly more inaccurate as the genre a film is heavily dictates the enjoyment one may have viewing it."
+    "It seems like there are missing values for the genre(62), type(25), and rating(230) columns. For a recommendation system, I believe that missing values like genre in particular, will make a content based filtering system significantly more inaccurate as the genre a film may heavily dictate the enjoyment one may have viewing it."
    ]
   },
   {
