--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,19 +19,32 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "# Suppress scientific notation of pandas\n",
+    "pd.set_option('display.float_format', lambda x: '%.0f' % x)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Anime Dataset"
+    "## Anime Dataset\n",
+    "\n",
+    "Keys:\n",
+    "- anime_id - myanimelist.net's unique id identifying an anime.\n",
+    "- name - full name of anime.\n",
+    "- genre - comma separated list of genres for this anime.\n",
+    "- type - movie, TV, OVA, etc.\n",
+    "- episodes - how many episodes in this show. (1 if movie).\n",
+    "- rating - average rating out of 10 for this anime.\n",
+    "- members - number of community members that are in this anime's\n",
+    "\"group\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +85,7 @@
        "      <td>Drama, Romance, School, Supernatural</td>\n",
        "      <td>Movie</td>\n",
        "      <td>1</td>\n",
-       "      <td>9.37</td>\n",
+       "      <td>9</td>\n",
        "      <td>200630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -82,7 +95,7 @@
        "      <td>Action, Adventure, Drama, Fantasy, Magic, Mili...</td>\n",
        "      <td>TV</td>\n",
        "      <td>64</td>\n",
-       "      <td>9.26</td>\n",
+       "      <td>9</td>\n",
        "      <td>793665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -92,7 +105,7 @@
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
        "      <td>51</td>\n",
-       "      <td>9.25</td>\n",
+       "      <td>9</td>\n",
        "      <td>114262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -102,7 +115,7 @@
        "      <td>Sci-Fi, Thriller</td>\n",
        "      <td>TV</td>\n",
        "      <td>24</td>\n",
-       "      <td>9.17</td>\n",
+       "      <td>9</td>\n",
        "      <td>673572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -112,7 +125,7 @@
        "      <td>Action, Comedy, Historical, Parody, Samurai, S...</td>\n",
        "      <td>TV</td>\n",
        "      <td>51</td>\n",
-       "      <td>9.16</td>\n",
+       "      <td>9</td>\n",
        "      <td>151266</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -128,11 +141,11 @@
        "4      9969                     Gintama&#039;   \n",
        "\n",
        "                                               genre   type episodes  rating  \\\n",
-       "0               Drama, Romance, School, Supernatural  Movie        1    9.37   \n",
-       "1  Action, Adventure, Drama, Fantasy, Magic, Mili...     TV       64    9.26   \n",
-       "2  Action, Comedy, Historical, Parody, Samurai, S...     TV       51    9.25   \n",
-       "3                                   Sci-Fi, Thriller     TV       24    9.17   \n",
-       "4  Action, Comedy, Historical, Parody, Samurai, S...     TV       51    9.16   \n",
+       "0               Drama, Romance, School, Supernatural  Movie        1       9   \n",
+       "1  Action, Adventure, Drama, Fantasy, Magic, Mili...     TV       64       9   \n",
+       "2  Action, Comedy, Historical, Parody, Samurai, S...     TV       51       9   \n",
+       "3                                   Sci-Fi, Thriller     TV       24       9   \n",
+       "4  Action, Comedy, Historical, Parody, Samurai, S...     TV       51       9   \n",
        "\n",
        "   members  \n",
        "0   200630  \n",
@@ -142,7 +155,7 @@
        "4   151266  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -351,61 +364,61 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>12064.000000</td>\n",
-       "      <td>1.229400e+04</td>\n",
+       "      <td>12064</td>\n",
+       "      <td>12294</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>6.473902</td>\n",
-       "      <td>1.807134e+04</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18071</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1.026746</td>\n",
-       "      <td>5.482068e+04</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54821</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>1.670000</td>\n",
-       "      <td>5.000000e+00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>5.880000</td>\n",
-       "      <td>2.250000e+02</td>\n",
+       "      <td>6</td>\n",
+       "      <td>225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>6.570000</td>\n",
-       "      <td>1.550000e+03</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>7.180000</td>\n",
-       "      <td>9.437000e+03</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>1.013917e+06</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1013917</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             rating       members\n",
-       "count  12064.000000  1.229400e+04\n",
-       "mean       6.473902  1.807134e+04\n",
-       "std        1.026746  5.482068e+04\n",
-       "min        1.670000  5.000000e+00\n",
-       "25%        5.880000  2.250000e+02\n",
-       "50%        6.570000  1.550000e+03\n",
-       "75%        7.180000  9.437000e+03\n",
-       "max       10.000000  1.013917e+06"
+       "       rating  members\n",
+       "count   12064    12294\n",
+       "mean        6    18071\n",
+       "std         1    54821\n",
+       "min         2        5\n",
+       "25%         6      225\n",
+       "50%         7     1550\n",
+       "75%         7     9437\n",
+       "max        10  1013917"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,6 +696,134 @@
    ],
    "source": [
     "rating_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id     int64\n",
+       "anime_id    int64\n",
+       "rating      int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>7813737</td>\n",
+       "      <td>7813737</td>\n",
+       "      <td>7813737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>36728</td>\n",
+       "      <td>8909</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>20998</td>\n",
+       "      <td>8884</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>18974</td>\n",
+       "      <td>1240</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>36791</td>\n",
+       "      <td>6213</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>54757</td>\n",
+       "      <td>14093</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>73516</td>\n",
+       "      <td>34519</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       user_id  anime_id  rating\n",
+       "count  7813737   7813737 7813737\n",
+       "mean     36728      8909       6\n",
+       "std      20998      8884       4\n",
+       "min          1         1      -1\n",
+       "25%      18974      1240       6\n",
+       "50%      36791      6213       7\n",
+       "75%      54757     14093       9\n",
+       "max      73516     34519      10"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df.describe()"
    ]
   },
   {
