--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -504,7 +504,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ratings Dataset"
+    "## Ratings Dataset\n",
+    "\n",
+    "Keys:\n",
+    "- user_id - non identifiable randomly generated user id.\n",
+    "- anime_id - the anime that this user has rated.\n",
+    "- rating - rating out of 10 this user has assigned (-1 if the user watched it but didn't assign a rating)."
    ]
   },
   {
@@ -827,11 +832,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "talk about mean median standard deviation?"
+   ]
   }
  ],
  "metadata": {
