--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4   151266  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "      <td>Hentai</td>\n",
        "      <td>OVA</td>\n",
        "      <td>1</td>\n",
-       "      <td>4.15</td>\n",
+       "      <td>4</td>\n",
        "      <td>211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -220,7 +220,7 @@
        "      <td>Hentai</td>\n",
        "      <td>OVA</td>\n",
        "      <td>1</td>\n",
-       "      <td>4.28</td>\n",
+       "      <td>4</td>\n",
        "      <td>183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -230,7 +230,7 @@
        "      <td>Hentai</td>\n",
        "      <td>OVA</td>\n",
        "      <td>4</td>\n",
-       "      <td>4.88</td>\n",
+       "      <td>5</td>\n",
        "      <td>219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -240,7 +240,7 @@
        "      <td>Hentai</td>\n",
        "      <td>OVA</td>\n",
        "      <td>1</td>\n",
-       "      <td>4.98</td>\n",
+       "      <td>5</td>\n",
        "      <td>175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -250,7 +250,7 @@
        "      <td>Hentai</td>\n",
        "      <td>Movie</td>\n",
        "      <td>1</td>\n",
-       "      <td>5.46</td>\n",
+       "      <td>5</td>\n",
        "      <td>142</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -266,14 +266,14 @@
        "12293     26081                   Yasuji no Pornorama: Yacchimae!!  Hentai   \n",
        "\n",
        "        type episodes  rating  members  \n",
-       "12289    OVA        1    4.15      211  \n",
-       "12290    OVA        1    4.28      183  \n",
-       "12291    OVA        4    4.88      219  \n",
-       "12292    OVA        1    4.98      175  \n",
-       "12293  Movie        1    5.46      142  "
+       "12289    OVA        1       4      211  \n",
+       "12290    OVA        1       4      183  \n",
+       "12291    OVA        4       5      219  \n",
+       "12292    OVA        1       5      175  \n",
+       "12293  Movie        1       5      142  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "(12294, 7)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "max        10  1013917"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "4        1       241      -1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "7813736    73516      8074       9"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "(7813737, 3)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,114 +728,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>anime_id</th>\n",
-       "      <th>rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>7813737</td>\n",
-       "      <td>7813737</td>\n",
-       "      <td>7813737</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>36728</td>\n",
-       "      <td>8909</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>20998</td>\n",
-       "      <td>8884</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>18974</td>\n",
-       "      <td>1240</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>36791</td>\n",
-       "      <td>6213</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>54757</td>\n",
-       "      <td>14093</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>73516</td>\n",
-       "      <td>34519</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       user_id  anime_id  rating\n",
-       "count  7813737   7813737 7813737\n",
-       "mean     36728      8909       6\n",
-       "std      20998      8884       4\n",
-       "min          1         1      -1\n",
-       "25%      18974      1240       6\n",
-       "50%      36791      6213       7\n",
-       "75%      54757     14093       9\n",
-       "max      73516     34519      10"
+       "user_id     False\n",
+       "anime_id    False\n",
+       "rating      False\n",
+       "dtype: bool"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rating_df.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "talk about mean median standard deviation?"
+    "rating_df.isnull().any()"
    ]
   }
  ],
