Finished data cleaning

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4   151266  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,122 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>anime_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>genre</th>\n",
-       "      <th>type</th>\n",
-       "      <th>episodes</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>members</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12289</th>\n",
-       "      <td>9316</td>\n",
-       "      <td>Toushindai My Lover: Minami tai Mecha-Minami</td>\n",
-       "      <td>Hentai</td>\n",
-       "      <td>OVA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>211</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12290</th>\n",
-       "      <td>5543</td>\n",
-       "      <td>Under World</td>\n",
-       "      <td>Hentai</td>\n",
-       "      <td>OVA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>183</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12291</th>\n",
-       "      <td>5621</td>\n",
-       "      <td>Violence Gekiga David no Hoshi</td>\n",
-       "      <td>Hentai</td>\n",
-       "      <td>OVA</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>219</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12292</th>\n",
-       "      <td>6133</td>\n",
-       "      <td>Violence Gekiga Shin David no Hoshi: Inma Dens...</td>\n",
-       "      <td>Hentai</td>\n",
-       "      <td>OVA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12293</th>\n",
-       "      <td>26081</td>\n",
-       "      <td>Yasuji no Pornorama: Yacchimae!!</td>\n",
-       "      <td>Hentai</td>\n",
-       "      <td>Movie</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>142</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       anime_id                                               name   genre  \\\n",
-       "12289      9316       Toushindai My Lover: Minami tai Mecha-Minami  Hentai   \n",
-       "12290      5543                                        Under World  Hentai   \n",
-       "12291      5621                     Violence Gekiga David no Hoshi  Hentai   \n",
-       "12292      6133  Violence Gekiga Shin David no Hoshi: Inma Dens...  Hentai   \n",
-       "12293     26081                   Yasuji no Pornorama: Yacchimae!!  Hentai   \n",
-       "\n",
-       "        type episodes  rating  members  \n",
-       "12289    OVA        1       4      211  \n",
-       "12290    OVA        1       4      183  \n",
-       "12291    OVA        4       5      219  \n",
-       "12292    OVA        1       5      175  \n",
-       "12293  Movie        1       5      142  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anime_df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +178,7 @@
        "(12294, 7)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +206,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +303,7 @@
        "max        10  1013917"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +330,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +358,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It seems like there are missing values for the genre(62), type(25), and rating(230) columns. For a recommendation system, I believe that missing values like genre in particular, will make a content based filtering system significantly more inaccurate as the genre a film may heavily dictate the enjoyment one may have viewing it."
+    "It seems like there are missing values for the genre(62), type(25), and rating(230) columns. For a recommendation system, missing values may make a content based filtering system less inaccurate as features like the genre a film may influence the enjoyment one may have viewing a certain anime. "
    ]
   },
   {
@@ -495,7 +380,7 @@
    "metadata": {},
    "source": [
     "<br>\n",
-    "Overall, I believe that for now, the anime dataset does not need any cleaning\n",
+    "Though this may be the case, I believe that for now, the anime dataset does not need any more cleaning.\n",
     "\n",
     "\n"
    ]
@@ -514,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +472,7 @@
        "4        1       241      -1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +559,7 @@
        "7813736    73516      8074       9"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +579,7 @@
        "(7813737, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,19 +590,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "user_id     int64\n",
-       "anime_id    int64\n",
-       "rating      int64\n",
+       "user_id       int64\n",
+       "anime_id      int64\n",
+       "rating      float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -740,13 +625,49 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rating_df.isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using -1 as the value for a no-rating may skew future analysis and the building of the recommender. Instead f using -1, I will replace all ratings of -1 with a null value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan 10.  8.  6.  9.  7.  3.  5.  4.  1.  2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rating_df[\"rating\"].replace({-1: np.nan}, inplace=True)\n",
+    "values = rating_df[\"rating\"].unique()\n",
+    "values.sort\n",
+    "print(values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the ratings has values from 1-10 and nan for empty ratings.\n",
+    "\n",
+    "The ratings dataset doesn't seem to need any more cleaning unless other issues arise."
    ]
   }
  ],
