Talked about duplicates and imported fuzzywuzzy

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -168,6 +168,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just by looking at the top 5 entries in the dataframe. We already see there seems to be duplicates due to formatting or differences in the way values where entered. I will need to clean this. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -373,6 +380,15 @@
    "metadata": {},
    "source": [
     "It seems like there are missing values for the genre(62), type(25), and rating(230) columns. For a recommendation system, missing values may make a content based filtering system less inaccurate as features like the genre a film may influence the enjoyment one may have viewing a certain anime. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fuzzywuzzy import process, fuzz"
    ]
   },
   {
