spent way too much time summing up number of anime genres

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -18,6 +18,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
     "%matplotlib inline\n",
     "pd.set_option('display.float_format', lambda x: '%.0f' % x)\n",
     "sns.set_palette(\"Set1\", 8, .75)"
@@ -152,6 +153,88 @@
     "# import anime dataset\n",
     "anime_df = pd.read_csv(\"datasets/cleaned_anime.csv\")\n",
     "anime_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3787, 7)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anime_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'Action': 1098,\n",
+       "         'Adventure': 932,\n",
+       "         'Drama': 697,\n",
+       "         'Fantasy': 765,\n",
+       "         'Magic': 353,\n",
+       "         'Military': 133,\n",
+       "         'Shounen': 712,\n",
+       "         'Comedy': 1870,\n",
+       "         'Historical': 275,\n",
+       "         'Parody': 126,\n",
+       "         'Samurai': 51,\n",
+       "         'Sci-Fi': 774,\n",
+       "         'Thriller': 34,\n",
+       "         'School': 567,\n",
+       "         'Sports': 240,\n",
+       "         'Super Power': 190,\n",
+       "         'Romance': 652,\n",
+       "         'Slice of Life': 562,\n",
+       "         'Supernatural': 431,\n",
+       "         'Mecha': 379,\n",
+       "         'Music': 123,\n",
+       "         'Mystery': 222,\n",
+       "         'Seinen': 235,\n",
+       "         'Space': 123,\n",
+       "         'Vampire': 46,\n",
+       "         'Shoujo': 283,\n",
+       "         'Horror': 113,\n",
+       "         'Police': 50,\n",
+       "         'Psychological': 89,\n",
+       "         'Ecchi': 245,\n",
+       "         'Josei': 32,\n",
+       "         'Game': 103,\n",
+       "         'Martial Arts': 95,\n",
+       "         'Demons': 89,\n",
+       "         'Harem': 175,\n",
+       "         'Dementia': 9,\n",
+       "         'Shounen Ai': 24,\n",
+       "         'Cars': 36,\n",
+       "         'Kids': 484,\n",
+       "         'Shoujo Ai': 31})"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "sum(anime_df[anime_df[\"genre\"].isnull() == False][\"genre\"].str.split(\", \").apply(Counter), Counter())\n"
    ]
   },
   {
